--- a/env/requirements.txt
+++ b/env/requirements.txt
@@ -1,9 +1,19 @@
-pandas>=2.0
-pyarrow>=15.0
-numpy>=1.24
-openpyxl>=3.1
-tqdm>=4.66
-transformers>=4.42
-peft>=0.11
-accelerate>=0.30
-faiss-cpu
+# Core
+transformers==4.43.3
+peft==0.12.0
+accelerate==0.31.0
+datasets==2.20.0
+sentence-transformers==3.0.1
+pandas==2.2.2
+pyarrow==15.0.2
+numpy==1.26.4
+tqdm==4.66.4
+rapidfuzz==3.9.7
+trafilatura==1.8.0
+faiss-cpu==1.8.0
+evaluate==0.4.2
+bert-score==0.3.13
+
+# NOTE:
+# We intentionally do NOT pin torch here because Colab provides it.
+# For local CUDA 12.1, use: torch==2.3.1+cu121  (with the PyTorch CUDA index URL)
